<?xml version="1.0" encoding="utf-8"?>
<!-- Folder for containing all static strings that will need to be included in this project -->

<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">InCorrect!</string>
    <string name="action_settings">Settings</string>
    <string name="next_question">Next</string>
    <string name="prev_question">Prev</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Africa</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest Asian freshwater lake</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_activity_cheat">activity_cheat</string>
    <string name="hello_world">Hello world!</string>

</resources>
